syntax = "proto3";

package noorsignal;

option go_package = "github.com/noorfinances-eng/noorchain-core/x/noorsignal/types";

import "cosmos/base/query/v1beta1/pagination.proto";

// -----------------------------------------------------------------------------
//  Basic PoSS types for queries
//  (mirroring the internal Go structs: Signal, Curator, PossConfig)
// -----------------------------------------------------------------------------

// Signal represents a social PoSS signal stored on NOORCHAIN.
message Signal {
  uint64 id = 1;
  string participant = 2;
  string curator = 3;
  uint32 weight = 4;
  int64 time = 5;        // UNIX timestamp (seconds)
  string metadata = 6;

  uint64 total_reward = 7;
  uint64 reward_participant = 8;
  uint64 reward_curator = 9;
}

// Curator represents a PoSS curator (validator of signals).
message Curator {
  string address = 1;
  string level = 2;
  uint64 total_signals_validated = 3;
  bool active = 4;
}

// PossConfig represents the global PoSS configuration.
message PossConfig {
  uint64 base_reward = 1;
  uint32 participant_share = 2;
  uint32 curator_share = 3;
  uint32 max_signals_per_day = 4;
  bool enabled = 5;
  uint32 era_index = 6;
}

// -----------------------------------------------------------------------------
//  Query messages
// -----------------------------------------------------------------------------

// Request to fetch a single signal by id.
message QuerySignalRequest {
  uint64 id = 1;
}

// Response containing a single signal, if found.
message QuerySignalResponse {
  Signal signal = 1;
}

// Request to fetch a paginated list of signals.
message QuerySignalsRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

// Response containing a paginated list of signals.
message QuerySignalsResponse {
  repeated Signal signals = 1;
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// Request to fetch a single curator by address.
message QueryCuratorRequest {
  string address = 1;
}

// Response containing a curator, if found.
message QueryCuratorResponse {
  Curator curator = 1;
}

// Request to fetch the current PoSS configuration.
message QueryConfigRequest {}

// Response containing the current PoSS configuration.
message QueryConfigResponse {
  PossConfig config = 1;
}

// Request to fetch the number of signals emitted by an address
// for a given "day bucket" (e.g. block_time / 86400).
message QueryDailyCountRequest {
  string address = 1;
  uint64 day = 2;
}

// Response containing the daily count.
message QueryDailyCountResponse {
  uint32 count = 1;
}

// -----------------------------------------------------------------------------
//  Query service
// -----------------------------------------------------------------------------

service Query {
  // Returns a single PoSS signal by id.
  rpc Signal(QuerySignalRequest) returns (QuerySignalResponse);

  // Returns a paginated list of PoSS signals.
  rpc Signals(QuerySignalsRequest) returns (QuerySignalsResponse);

  // Returns information about a PoSS curator.
  rpc Curator(QueryCuratorRequest) returns (QueryCuratorResponse);

  // Returns the current PoSS configuration.
  rpc Config(QueryConfigRequest) returns (QueryConfigResponse);

  // Returns the number of signals emitted by an address for a given day bucket.
  rpc DailyCount(QueryDailyCountRequest) returns (QueryDailyCountResponse);
}
